--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
 language: php
 install:
-   - composer install
+    - composer require --dev php-coveralls/php-coveralls '^2.2'
+    - composer install --dev
+php:
+    - 7.2
+    - 7.3
+    - 7.4
+script:
+  - phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - php vendor/bin/coveralls -v 
