--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,22 @@
 language: php
-install:
-    - composer require --dev php-coveralls/php-coveralls '^2.2'
-    - composer install --dev
 php:
     - 7.2
     - 7.3
     - 7.4
+    - nightly
+install:
+    - composer require --dev php-coveralls/php-coveralls '^2.2'
+    - composer install --prefer-dist
+matrix:
+  allow_failures:
+    - php: nightly
+cache:
+  directories:
+    - $HOME/.composer
+    
 script:
-  - phpunit --coverage-clover build/logs/clover.xml
+  - composer validate
+  - vendor/bin/phpunit --verbose || travis_terminate 1
 
 after_script:
-  - php vendor/bin/coveralls -v 
+  - travis_retry php vendor/bin/coveralls -v 
