--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ cache:
     - $HOME/.composer
 
 install:
-  - composer install --prefer-dist
+  - composer install --dev --prefer-dist
 
 script:
   - composer validate
-  - phpunit --verbose || travis_terminate 1
-
-after_success:
-  - travis_retry php vendor/bin/coveralls -v
+  - phpunit --coverage-clover build/logs/clover.xml
+  
+after_script:
+  - php vendor/bin/coveralls -v
